--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -48,7 +48,7 @@
 
      
       <button mat-raised-button [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" *ngIf="!tokenExist">Log in</button>
-      <button mat-raised-button [ngClass]="toolbar_variable?'btn_login_change':'btn_signup'" routerLink="/register" *ngIf="!tokenExist">Sign in</button>
+      <button mat-raised-button [ngClass]="toolbar_variable?'btn_login_change':'btn_signup'" routerLink="/register" *ngIf="!tokenExist">Sign Up</button>
     </div>
    
       
