archive logic and small update

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,11 +9,11 @@
             <!-- <mat-list-item routerLink="/dashboard"> -->
                 <!-- <mat-icon>dashboard</mat-icon><span>Dashboard</span> -->
             <!-- </mat-list-item> -->
-            <mat-list-item (click)="openDialog()">
+            <mat-list-item (click)="createNewProject()">
                 <mat-icon>create_new_folder</mat-icon><span>New Project</span>
             </mat-list-item>
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header (click)="valueChange()">
+                <mat-expansion-panel-header (click)="matBadgeTogglor('PROJECT')">
                     <div id="active">
                         My Projects <span id="badge" *ngIf="!valueData && badgeValue!=0" matBadge="{{badgeValue}}" matBadgeColor="warn"></span>
                     </div>
@@ -23,7 +23,7 @@
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header  (click)="anotherChange()">
+                <mat-expansion-panel-header  (click)="matBadgeTogglor('ASSIGNED')">
                     <div>
                         Assigned Projects <span id="badge" *ngIf="!assignValue && assignedValue!=0" matBadge="{{assignedValue}}" matBadgeColor="warn"></span>
                     </div>
@@ -33,12 +33,12 @@
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header  (click)="anotherChange()">
+                <mat-expansion-panel-header  (click)="matBadgeTogglor('ARCHIVE')">
                     <div>
-                       Archive 
+                       Archive <span id="badge" *ngIf="!archiveData && archiveValue!=0" matBadge="{{archiveValue}}" matBadgeColor="warn"></span>
                     </div>
                 </mat-expansion-panel-header>
-                <mat-nav-list *ngFor="let project of assignedProjects">
+                <mat-nav-list *ngFor="let project of archiveProjects">
                     <a mat-list-item (click)="showAssignedProjects(project)">{{project?.name}}</a>
                 </mat-nav-list>
             </mat-expansion-panel>
