--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,19 +3,19 @@
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="false" class="app-sidenav">
         <mat-nav-list>
-            <mat-list-item routerLink="/home">
-                <mat-icon>home</mat-icon><span>Home</span>
+            <mat-list-item id="home" routerLink="/home">
+                &nbsp;&nbsp; <mat-icon>home</mat-icon>&nbsp;&nbsp;<span>Home</span>
             </mat-list-item>
             <!-- <mat-list-item routerLink="/dashboard"> -->
                 <!-- <mat-icon>dashboard</mat-icon><span>Dashboard</span> -->
             <!-- </mat-list-item> -->
-            <mat-list-item (click)="openDialog()">
-                <mat-icon>create_new_folder</mat-icon><span>New Project</span>
+            <mat-list-item id="new" (click)="openDialog()">
+                &nbsp;&nbsp;<mat-icon>create_new_folder</mat-icon>&nbsp;&nbsp;<span>New Project</span>
             </mat-list-item>
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header (click)="valueChange()">
                     <div id="active">
-                        My Projects <span id="badge" *ngIf="!valueData && badgeValue!=0" matBadge="{{badgeValue}}" matBadgeColor="warn"></span>
+                        <i class="fa-solid fa-tarp"></i> &nbsp;&nbsp; My Projects <span id="badge" *ngIf="!valueData && badgeValue!=0" matBadge="{{badgeValue}}" matBadgeColor="warn"></span>
                     </div>
                 </mat-expansion-panel-header>
                 <mat-nav-list id="list" *ngFor="let project of projectsList$">
@@ -25,7 +25,7 @@
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header  (click)="anotherChange()">
                     <div>
-                        Assigned Projects <span id="badge" *ngIf="!assignValue && assignedValue!=0" matBadge="{{assignedValue}}" matBadgeColor="warn"></span>
+                        <i class="fa-solid fa-calendar-check"></i> &nbsp;&nbsp; Assigned Projects <span id="badge" *ngIf="!assignValue && assignedValue!=0" matBadge="{{assignedValue}}" matBadgeColor="warn"></span>
                     </div>
                 </mat-expansion-panel-header>
                 <mat-nav-list *ngFor="let project of assignedProjects">
@@ -35,13 +35,16 @@
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header  (click)="anotherChange()">
                     <div>
-                       Archive 
+                        <i class="fa-solid fa-trash-can-arrow-up"></i>&nbsp;&nbsp;Archive 
                     </div>
                 </mat-expansion-panel-header>
                 <mat-nav-list *ngFor="let project of assignedProjects">
                     <a mat-list-item (click)="showAssignedProjects(project)">{{project?.name}}</a>
                 </mat-nav-list>
             </mat-expansion-panel>
+            <mat-list-item routerLink="/chat">
+                <i class="fa-solid fa-headset"></i>&nbsp;&nbsp;<span>Chat Support</span>
+            </mat-list-item>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
@@ -50,7 +53,8 @@
     
         <div id="top-bar">
             <button mat-icon-button  (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
-            <h1>Projects <button id="i" (click)="reload()"><mat-icon id="refresh">refresh</mat-icon></button></h1> 
+            <h1>Projects</h1> 
+                <button mat-fab id="support" routerLink="/chat"><i class="fa-solid fa-headset"></i></button>
         </div>
 
         <div id="project-container">           
