--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -52,6 +52,7 @@ ul{
 }
 
 #main-container{
+    height: 900px;
     overflow: hidden;
 }
 
@@ -62,8 +63,6 @@ ul{
     background-color: white;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-
-    
 }
 
 span{
@@ -71,7 +70,7 @@ span{
     font-size: 30px;
 }
 mat-tab-group{
-    background-color: #f6deb8;
+    background-color: #e2e2e6;
    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
 }
 
