Updated with new changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
             <!-- <mat-list-item routerLink="/dashboard"> -->
                 <!-- <mat-icon>dashboard</mat-icon><span>Dashboard</span> -->
             <!-- </mat-list-item> -->
-            <mat-list-item id="new" (click)="openDialog()">
+            <mat-list-item id="new" (click)="createNewProject()">
                 &nbsp;&nbsp;<mat-icon>create_new_folder</mat-icon>&nbsp;&nbsp;<span>New Project</span>
             </mat-list-item>
             <mat-expansion-panel  [class.mat-elevation-z0]="true">
