--- a/src/app/queries/queries.component.html
+++ b/src/app/queries/queries.component.html
@@ -36,6 +36,11 @@
                 <button class="app-form-button">CANCEL</button>
                 <button class="app-form-button">SEND</button>
               </div>
+              <div id="content">
+                <h2>
+                  <i class="fa-solid fa-triangle-exclamation"></i> Please the Corect Email ...... <br> This Email address will be used <br> to contact you !
+                </h2>
+              </div>
             </div>
           </div>
         </div>
