--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -1,34 +1,52 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
 
 
-.mat-card{
-    position: fixed;
-    top: 180px;
-    width: 900px;
-    height: 550px;
-    left: 600px;
-    border-radius: 20px;
-    background-color: #f6f8fc;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    /* box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
+.mat-card {
+  position: fixed;
+  top: 180px;
+  width: 900px;
+  height: 550px;
+  left: 850px;
+  border-radius: 10px;
+  background-image: url('../../assets/side_nav.png');
+  background-size: cover;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
-h1{
-  margin-top: 50px;
-  margin-left: 300px;
-  margin-bottom: 50px;
-  font-size: 60px;
+#input {
+  width: 80%;
+  background-color: transparent;
+  margin-left: 10px;
+  padding-left: 20px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #333;
+}
+
+.mat-card::before {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+h2 {
+  margin-top: 30px;
+  margin-left: 250px;
+  font-size: 40px;
   font-weight: 900px;
-  font-family: 'Phudu', cursive;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   letter-spacing: 0.2rem;
+
+
 }
 
-#person{
+#person {
   width: 850px;
   position: absolute;
   top: 250px;
-  left: -150px;
+  left: 100px;
+}
+
+footer{
+  position: relative;
+  top: 795px;
 }
 
 
@@ -43,7 +61,7 @@ label {
   font-size: 25px;
 }
 
-textarea{
+textarea {
   font-family: 'Ubuntu', sans-serif;
   display: block;
   margin-top: 10px;
@@ -56,6 +74,7 @@ textarea:focus,
 input:focus {
   outline: 0;
 }
+
 /* Question */
 
 input.question,
@@ -68,12 +87,14 @@ textarea.question {
   width: 80%;
   background: rgba(0, 0, 0, 0);
   transition: padding-top 0.2s ease, margin-top 0.2s ease;
-  overflow-x: hidden; /* Hack to make "rows" attribute apply in Firefox. */
+  overflow-x: hidden;
+  /* Hack to make "rows" attribute apply in Firefox. */
 }
+
 /* Underline and Placeholder */
 
-input.question + label,
-textarea.question + label {
+input.question+label,
+textarea.question+label {
   display: block;
   position: relative;
   white-space: nowrap;
@@ -86,8 +107,8 @@ textarea.question + label {
   height: 0px;
 }
 
-input.question:focus + label,
-textarea.question:focus + label {
+input.question:focus+label,
+textarea.question:focus+label {
   width: 80%;
 }
 
@@ -101,22 +122,22 @@ textarea.question:focus {
   margin-top: 35px;
 }
 
-input.question:focus + label > span,
-input.question:valid + label > span {
+input.question:focus+label>span,
+input.question:valid+label>span {
   top: -100px;
   font-size: 22px;
   color: #333;
 }
 
-textarea.question:focus + label > span,
-textarea.question:valid + label > span {
+textarea.question:focus+label>span,
+textarea.question:valid+label>span {
   top: -150px;
   font-size: 15px;
   color: #333;
 }
 
-input.question:valid + label,
-textarea.question:valid + label {
+input.question:valid+label,
+textarea.question:valid+label {
   border-color: green;
 }
 
@@ -125,8 +146,8 @@ textarea.question:invalid {
   box-shadow: none;
 }
 
-input.question + label > span,
-textarea.question + label > span {
+input.question+label>span,
+textarea.question+label>span {
   font-weight: 300;
   margin: 0;
   position: absolute;
@@ -160,12 +181,14 @@ input[type="submit"]:active {
   background: #999;
 }
 
-input.question:valid ~ input[type="submit"], textarea.question:valid ~ input[type="submit"] {
+input.question:valid~input[type="submit"],
+textarea.question:valid~input[type="submit"] {
   -webkit-animation: appear 1s forwards;
   animation: appear 1s forwards;
 }
 
-input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input[type="submit"] {
+input.question:invalid~input[type="submit"],
+textarea.question:invalid~input[type="submit"] {
   display: none;
 }
 
@@ -181,37 +204,42 @@ input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input
   }
 }
 
-#support{
+#support {
   padding: 1rem;
-  background-color: rgb(240, 237, 237);
+  background-image: url('../../assets/side_nav.png');
+  background-size: cover;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
- 
+
 }
 
-form{
+form {
   width: 100%;
 }
 
-form>mat-form-field{
+form>mat-form-field {
   width: 90%;
   margin-left: .7rem;
 
 }
-form>button{
+
+form>button {
   background-color: orange;
   color: white;
-  margin-left: 2%;
+  position: relative;
+  left: 800px;
+  bottom: 40px;
 }
-#input-message{
+
+#input-message {
   margin-top: auto;
   /* margin-bottom: 0rem; */
 }
 
-#sender>p{
+#sender>p {
   width: fit-content;
   max-width: 70%;
-  background-color: orange;
+  background-color: #1486cd;
   color: white;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -220,8 +248,10 @@ form>button{
   margin-right: 1%;
   padding: .5rem;
   text-align: right;
+  font-size: 20px;
 }
-#receiver>p{
+
+#receiver>p {
   width: fit-content;
   max-width: 70%;
   background-color: gray;
@@ -230,9 +260,9 @@ form>button{
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   padding: .5rem;
-  
+
 }
 
-#chat-history{
+#chat-history {
   overflow-y: auto;
 }
