--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -11,7 +11,7 @@ button{
 #cards{
     margin-top: 20px;
     height: 450px;
-    background-color: antiquewhite;
+    background-color: #e2e2e6;
     border: 0;
     border-radius: 20px;
 }
@@ -19,10 +19,17 @@ button{
 #contents{
     font-weight: bold;
     font-size: 20px;
+    position: absolute;
+    top: 30px;
+    left: 90px;
+}
+
+#members{
+    font-weight: bold;
+    font-size: 20px;
     position: relative;
     top: -30px;
     left: 90px;
-    
 }
 
 #title{
@@ -54,6 +61,38 @@ ul{
 #main-container{
     height: 900px;
     overflow: hidden;
+}
+
+
+#plus_icon{
+    font-size: 50px;
+    margin-left: 70px;
+    margin-top: 20px;
+}
+
+#plus{
+    margin-left: 60px;
+    cursor: pointer;
+}
+
+#addMember{
+    position: fixed;
+    top: 500px;
+    left: 1150px;
+    border: 5px dashed green;
+    width: 350px;
+    height: 200px;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+#delete{
+    background-color: transparent;
+    color: black;
+}
+
+#delete:hover{
+    color: red;
 }
 
 #top-bar{
