--- a/src/app/queries/queries.component.css
+++ b/src/app/queries/queries.component.css
@@ -14,6 +14,25 @@
     font-weight: 700;
     letter-spacing: 1.4px;
   }
+
+  h2{
+    margin-top: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    letter-spacing: 1.4px;
+    color: #666666;
+  }
+
+  #content{
+    margin-top: 20px;
+    border: 1px solid #666666;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  
+  i{
+    color: yellow;
+  }
   
   .background {
     display: flex;
@@ -179,24 +198,6 @@
     color: #b9134f;
   }
   
-  .credits {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    color: #ffa4bd;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    font-weight: normal;
-  }
-  
-  .credits-link {
-    display: flex;
-    align-items: center;
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-  }
   
   .dribbble {
     width: 20px;
