small change in task

--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -1,24 +1,18 @@
-<div>
 
   <mat-card class="task-card">
-    <div>
-
+    <div id="top_sec">
       <mat-card-header>
         <mat-card-title>{{task.name}}
-          <div>
-            <img *ngIf="userDetails?.profile_pic" src="{{userDetails?.profile_pic}}" matTooltip="{{userDetails?.email}}" alt="profile pictures">
-            <button mat-icon-button id="buttons" *ngIf="!userDetails?.profile_pic" matTooltip="No Members Added to Task"><i id="add" class="fa-solid fa-user-plus"></i></button> 
-          </div>
-        </mat-card-title><button mat-icon-button matTooltip="Edit Task" id="icon"><i id="pen" class="fa-solid fa-file-pen"></i></button>
+        </mat-card-title>
         <mat-card-subtitle>{{task.description}}</mat-card-subtitle>
       </mat-card-header>
-
-      <button id="delete" matTooltip="Delete Task" color="warn" mat-icon-button (click)="deleteTask(task)" >
-        <i id="trash" class="fa-solid fa-trash"></i>
-      </button>
+      <mat-card-content class="memberList mt-3" *ngFor="let user of task.memberList">
+          <img *ngIf="user?.profile_pic" src="{{user?.profile_pic}}" matTooltip="{{user?.email}}" alt="profile pictures">
+      </mat-card-content>
     </div>
 
     <mat-card-content>
+      
       <button mat-icon-button type="button" (click)="isOpen = !isOpen" matTooltip="{{task.priority}}" cdkOverlayOrigin
         #trigger="cdkOverlayOrigin"><mat-icon id='{{task.priority}}'>flag</mat-icon></button>
       <!-- This template displays the overlay content and is connected to the button -->
@@ -32,16 +26,29 @@
               id='High'>flag</mat-icon>HIGH<mat-icon *ngIf="task.priority == 'High'">check</mat-icon></li>
         </ul>
       </ng-template>
+      
     </mat-card-content>
     <mat-card-actions>
+      <div>
 
-      <!-- <mat-select name="status" [(ngModel)]="task.status" #status="ngModel" (selectionChange)="changeStatus(task)">
-        <mat-option *ngFor="let status of statuses" [value]="status">{{status}}</mat-option>
-      </mat-select> -->
+      </div>
+      <!-- <button mat-icon-button [matMenuTriggerFor]="addMember" matTooltip="No Members Added to Task" ><i id="add" class="fa-solid fa-user-plus"></i></button>
+      <mat-menu  class="member_mune"  #addMember="matMenu">
+        <div mat-menu-item>
+          <mat-select [(ngModel)]="formData.memberList" name="memberList" multiple>
+            <mat-option matTooltipPosition="left" *ngFor="let email of members" [value]="email">
+              {{email.email}}
+            </mat-option>
+          </mat-select>
+        </div>
+      </mat-menu> -->
+      
+      <button mat-icon-button matTooltip="Edit Task"><i id="pen" class="fa-solid fa-file-pen"></i></button>
+      <button mat-icon-button  matTooltip="Delete Task" (click)="deleteTask(task)"><i id="trash" class="fa-solid fa-trash"></i></button>
     </mat-card-actions>
     <!-- <mat-card-footer> -->
       <!-- <mat-progress-bar mode="determinate" value="50"></mat-progress-bar> -->
     <!-- </mat-card-footer> -->
   </mat-card>
 
-</div>
+ 
