--- a/src/app/task-card/task-card.component.css
+++ b/src/app/task-card/task-card.component.css
@@ -12,7 +12,7 @@
   visibility: visible;
 }
 
-div {
+#top_sec {
   display: flex;
   justify-content: space-between;
 }
@@ -90,14 +90,14 @@ mat-progress-bar {
   border-radius: 50px;
 }
 
-mat-select {
-  /* background-color: #f9f9f9; */
+/* mat-select {
+  background-color: #f9f9f9;
   margin: 5%;
   background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
-}
+} */
 
 #Low {
   color: green;
@@ -130,8 +130,8 @@ mat-select {
 
 img {
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 
 #buttons{
@@ -211,4 +211,20 @@ i{
   z-index: 1;
   left: 0;
   top: 110%;
+}
+.memberList{
+  max-width: 75px;
+  display: flex;
+  justify-content: space-evenly;
+}
+/* mat-card-actions{
+  visibility: hidden;
+}
+mat-card:hover mat-card-actions{
+  justify-content: space-around;
+  visibility: visible;
+} */
+
+.member_mune{
+  width: 50px;
 }
