delete project archive

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,28 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; --navbar-scroll: transparent; 
-    --navbar-scroll-text: white;
-    --navbar-scroll-shadow: none; }
+html,
+body {
+  height: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  --navbar-scroll: transparent;
+  --navbar-scroll-text: white;
+  --navbar-scroll-shadow: none;
+}
 
-  * {
-    scrollbar-width: thin;
-    scrollbar-color: #000000;
-  }
+html,
+body {
+  height: 100%;
+}
 
-  *::-webkit-scrollbar {
-    width: 10px;
-  }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-  *::-webkit-scrollbar-track {
-    background: #bdcad4;
-  }
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #000000;
+}
 
-  *::-webkit-scrollbar-thumb {
-    background-color: #000000;
-    border-radius: 10px;
-    border: 1px solid #9c9c9c;
-  }
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #bdcad4;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 10px;
+  border: 1px solid #9c9c9c;
+}
+
+.custom-container .mat-dialog-container {
+  border-radius: 50px !important;
+}
