Updated with Edit Component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,26 +46,8 @@
     <h2 id="extra">Start Now and Experience Our Futuristic UI </h2>
   </div>
 
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="1000">
-        <img src="../../assets/bg1.png" class="d-block" alt="...">
-      </div>
-      <div class="carousel-item" data-bs-interval="1000">
-        <img src="../../assets/alt_cleanup.jpg" class="d-block" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../../assets/backgrounds.jpg" class="d-block " alt="...">
-      </div>
-    </div>
-    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev"> -->
-      <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
-      <!-- <span class="visually-hidden">Previous</span> -->
-    <!-- </button> -->
-    <!-- <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next"> -->
-      <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-      <!-- <span class="visually-hidden">Next</span> -->
-    <!-- </button> -->
+  <div>
+    <iframe id="carouselExampleInterval" width="500" height="450" src="https://www.youtube.com/embed/tgbNymZ7vqY" ></iframe>
   </div>
 
 
