--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,7 @@
 		</div>
 		<button [disabled]="!loginForm.valid" type="submit" class="submit-btn">Log in</button>
         <h6 id="forgot" routerLink="/forgetPassword">Forgot Password ?</h6>
-         <asl-google-signin-button type='standard' size='large' id="google" shape="pill" theme="outline" text="continue_with"></asl-google-signin-button>
+         <!-- <asl-google-signin-button type='standard' size='large' id="google" shape="pill" theme="outline" text="continue_with"></asl-google-signin-button> -->
     </form>
 	</div>
 	<div class="login slide-up">
