--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -119,7 +119,7 @@
       <mat-icon id="eye" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 		</div>
 		<button id="btn" mat-raised-button type="submit" [disabled]="registerForm.invalid" >Sign up</button>
-    <asl-google-signin-button size='large' id="google" shape="pill" theme="outline"></asl-google-signin-button>
+    <!-- <asl-google-signin-button size='large' id="google" shape="pill" theme="outline"></asl-google-signin-button> -->
   </form>
 	</div>
 	<div class="login slide-up">
