--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -8,6 +8,7 @@
       </mat-card-header>
       <mat-card-content class="memberList mt-3" *ngFor="let user of task.memberList">
           <img *ngIf="user?.profile_pic" src="{{user?.profile_pic}}" matTooltip="{{user?.email}}" alt="profile pictures">
+          <button *ngIf="!user?.profile_pic" matTooltip="{{user?.email}}" id="profile"><i id="name" class="fa-solid fa-{{firstLetter}}"></i></button>
       </mat-card-content>
     </div>
 
@@ -43,7 +44,7 @@
         </div>
       </mat-menu> -->
       
-      <button mat-icon-button matTooltip="Edit Task"><i id="pen" class="fa-solid fa-file-pen"></i></button>
+      <button mat-icon-button (click)="taskDetails(task)" matTooltip="Edit Task"><i id="pen" class="fa-solid fa-file-pen"></i></button>
       <button mat-icon-button  matTooltip="Delete Task" (click)="deleteTask(task)"><i id="trash" class="fa-solid fa-trash"></i></button>
     </mat-card-actions>
     <!-- <mat-card-footer> -->
