Added our Profile pics annd other changes

--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -41,7 +41,7 @@ span{
 }
 
 footer{
-    margin-top: 41px;
+    margin-top: 47px;
 }
 
 
@@ -64,7 +64,8 @@ footer{
     -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     overflow: hidden;
-    width: 100%;
+    width: 408px;
+    height: 500px;
   }
   
   .team-member,
