--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -15,7 +15,7 @@
       <div class="col-md-4 col-sm-6 team-wrap">
         <div class="team-member text-center">
           <div class="team-img">
-            <img src="http://deothemes.com/envato/enigma/html/img/team_1.jpg" alt="">
+            <img src="../../assets/selvam.jpg" alt="">
             <div class="overlay">
               <div class="team-details text-center">
                 <p>
@@ -39,7 +39,7 @@
       <div class="col-md-4 col-sm-6 team-wrap">
         <div class="team-member text-center">
           <div class="team-img">
-            <img src="http://deothemes.com/envato/enigma/html/img/team_2.jpg" alt="">
+            <img src="../../assets/sujay.jpg" alt="">
             <div class="overlay">
               <div class="team-details text-center">
                 <p>
@@ -63,7 +63,7 @@
       <div class="col-md-4 col-sm-6 team-wrap">
         <div class="team-member last text-center">
           <div class="team-img">
-            <img src="http://deothemes.com/envato/enigma/html/img/team_3.jpg" alt="">
+            <img src="../../assets/Vinay.jpg" alt="">
             <div class="overlay">
               <div class="team-details text-center">
                 <p>
