--- a/src/app/pricings/pricings.component.html
+++ b/src/app/pricings/pricings.component.html
@@ -27,7 +27,7 @@
           <img src="../../assets/pay2.jpg" alt="Standard">
         </figure>
   
-        <button *ngIf="name">Free</button>
+        <button *ngIf="name" (click)="freeMessage()">Free</button>
         <button *ngIf="!name" (click)="toSignUp()">Sign Up</button>
   
         <div class="design-container">
@@ -72,7 +72,12 @@
           <img src="../../assets/pay2.jpg" alt="image-2">
         </figure>
   
-        <button *ngIf="name" (click)="pay()">Pay Now</button>
+        <button *ngIf="name && title=='FREE' " (click)="pay()">Pay Now</button>
+        <h2 *ngIf="name && title=='PREMIUM'">Thankyou For Subscribing</h2>
+        <div>
+          <button id="dash" *ngIf="name && title=='PREMIUM'" routerLink="/dashboard">Dashboard</button>
+        </div>
+        
         <button *ngIf="!name" (click)="toSignUp()">Sign Up</button>
   
         <div class="design-container">
